Equipment grid-gap fixed

--- a/source/sass/components/_equipment.scss
+++ b/source/sass/components/_equipment.scss
@@ -13,6 +13,6 @@
 .equipment__list {
   @include list;
   display: grid;
-  grid-column-gap: 30px;
+  grid-row-gap: 20px;
   margin-bottom: 0;
 }
